Setting up Cognito in terraform

--- a/.gitignore
+++ b/.gitignore
@@ -40,5 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+# terraform
+*.tfstate
+*.tfstate.*
+*.tfplan
+*.tfplan.*
+.terraform/
+terraform.tfvars
+
 # project files
 CLAUDE.md
