--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.835.0",
     "@aws-sdk/client-dynamodb": "^3.835.0",
     "@aws-sdk/client-lambda": "^3.835.0",
     "@aws-sdk/client-s3": "^3.837.0",
