in the middle of refactoring terraform resources

--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "@aws-sdk/client-cognito-identity-provider": "^3.835.0",
     "@aws-sdk/client-dynamodb": "^3.835.0",
     "@aws-sdk/client-lambda": "^3.835.0",
+    "@aws-sdk/client-rds-data": "^3.835.0",
     "@aws-sdk/client-s3": "^3.837.0",
+    "@aws-sdk/client-secrets-manager": "^3.835.0",
     "aws-sdk": "^2.1692.0",
     "next": "15.3.4",
+    "pg": "^8.11.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -28,6 +31,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^20",
+    "@types/pg": "^8.10.9",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
